[gd_scene load_steps=15 format=3 uid="uid://mluyid7u8xr7"]

[ext_resource type="Texture2D" uid="uid://bcp2mfipvbawy" path="res://phonkguy.jpg" id="1_f4i4e"]
[ext_resource type="Script" uid="uid://chmr8y1dt1ltd" path="res://phonk.gd" id="1_ybauc"]
[ext_resource type="Texture2D" uid="uid://dw5gs5emxhs6h" path="res://sspeaker.png" id="2_2c122"]
[ext_resource type="Texture2D" uid="uid://byg71abmminqe" path="res://buttongreen.png" id="3_klnno"]
[ext_resource type="AudioStream" uid="uid://dp2cek1u647eb" path="res://0405 (2).MP3.mp3" id="3_l2p1m"]
[ext_resource type="Texture2D" uid="uid://gtc3sawh3hrx" path="res://buttonred.png" id="4_42h4o"]
[ext_resource type="Texture2D" uid="uid://bm1v0b5e5l3jh" path="res://submitrating.png" id="6_xx32g"]
[ext_resource type="Texture2D" uid="uid://wr1mq6b7b0kb" path="res://montagem.png" id="7_nanuj"]
[ext_resource type="Texture2D" uid="uid://6ef3t3uuaa51" path="res://playbar.png" id="8_c0f8b"]
[ext_resource type="Texture2D" uid="uid://c7uompxmp4yka" path="res://playing.png" id="9_vftmd"]
[ext_resource type="Texture2D" uid="uid://wuk2k2xa31ol" path="res://backten.png" id="10_r6gl1"]
[ext_resource type="Texture2D" uid="uid://cj4cdodnx41fx" path="res://forwardten.png" id="11_l2p1m"]
[ext_resource type="AudioStream" uid="uid://c3go5pp70l3yj" path="res://pKCuvKQ.wav" id="13_l2p1m"]
[ext_resource type="Texture2D" uid="uid://dvsh3a8u1mj4c" path="res://soundamount.png" id="15_81jqk"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_ybauc")

[node name="speaker" type="Sprite2D" parent="."]
position = Vector2(61.250004, 100.625)
scale = Vector2(0.29206732, 0.3137343)
texture = ExtResource("2_2c122")

[node name="Phonk player" type="AudioStreamPlayer2D" parent="speaker"]
stream = ExtResource("3_l2p1m")

[node name="speaker2" type="Sprite2D" parent="."]
position = Vector2(509, 100)
scale = Vector2(0.29206732, 0.3137343)
texture = ExtResource("2_2c122")

[node name="Phonkguy" type="Sprite2D" parent="."]
position = Vector2(850.25, 266.25)
scale = Vector2(3.28869, 1.6483333)
texture = ExtResource("1_f4i4e")

[node name="Good" type="TextureButton" parent="."]
offset_left = 614.0
offset_top = 412.0
offset_right = 850.0
offset_bottom = 515.0
texture_normal = ExtResource("3_klnno")

[node name="Bad" type="TextureButton" parent="."]
offset_left = 917.0
offset_top = 426.0
offset_right = 1141.0
offset_bottom = 504.0
texture_normal = ExtResource("4_42h4o")

[node name="Submitphonk" type="TextureButton" parent="."]
offset_left = 796.0
offset_top = 424.0
offset_right = 979.0
offset_bottom = 527.0
texture_normal = ExtResource("6_xx32g")
texture_pressed = ExtResource("6_xx32g")
texture_hover = ExtResource("6_xx32g")
texture_disabled = ExtResource("6_xx32g")
texture_focused = ExtResource("6_xx32g")
ignore_texture_size = true
stretch_mode = 0

[node name="Phonkthumbnail" type="Sprite2D" parent="."]
position = Vector2(54.00003, 295)
scale = Vector2(1.7244898, 1.7244898)
texture = ExtResource("7_nanuj")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Name" type="Label" parent="UI"]
offset_left = 16.0
offset_top = 181.0
offset_right = 276.0
offset_bottom = 281.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 23
theme_override_font_sizes/font_size = 20
text = "Phonk Name:"

[node name="By" type="Label" parent="UI"]
offset_left = 15.0
offset_top = 217.0
offset_right = 275.0
offset_bottom = 317.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 23
theme_override_font_sizes/font_size = 15
text = "By:"

[node name="Rating" type="Label" parent="UI"]
offset_left = 318.0
offset_top = 160.0
offset_right = 590.0
offset_bottom = 259.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 23
theme_override_font_sizes/font_size = 60
text = "Rating:"
horizontal_alignment = 1

[node name="Increaserate" type="Label" parent="UI"]
offset_left = 578.0
offset_top = 443.0
offset_right = 850.0
offset_bottom = 542.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 23
theme_override_font_sizes/font_size = 15
text = "increase rating"
horizontal_alignment = 1

[node name="Submitrating" type="Label" parent="UI"]
offset_left = 740.0
offset_top = 464.0
offset_right = 1012.0
offset_bottom = 563.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 23
theme_override_font_sizes/font_size = 10
text = "Submit rating"
horizontal_alignment = 1

[node name="Decreaserate" type="Label" parent="UI"]
offset_left = 891.0
offset_top = 441.0
offset_right = 1163.0
offset_bottom = 540.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 23
theme_override_font_sizes/font_size = 15
text = "decrease rating"
horizontal_alignment = 1

[node name="Songprogress" type="Label" parent="UI"]
offset_left = 758.0
offset_top = 549.0
offset_right = 1018.0
offset_bottom = 649.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 23
theme_override_font_sizes/font_size = 40
text = "Song 1/10"

[node name="Playbar" type="Sprite2D" parent="UI"]
position = Vector2(287, 93.118996)
rotation = 1.5707964
scale = Vector2(0.42067307, 0.3833034)
texture = ExtResource("8_c0f8b")

[node name="Playing" type="TextureButton" parent="UI"]
offset_left = 253.0
offset_top = 59.11899
offset_right = 327.41678
offset_bottom = 188.30075
scale = Vector2(0.92721015, 0.6015338)
texture_normal = ExtResource("9_vftmd")
ignore_texture_size = true
stretch_mode = 0

[node name="backten" type="TextureButton" parent="UI"]
offset_left = 165.0
offset_top = 63.118996
offset_right = 235.0
offset_bottom = 130.51944
texture_normal = ExtResource("10_r6gl1")
ignore_texture_size = true
stretch_mode = 0

[node name="forwardten" type="TextureButton" parent="UI"]
offset_left = 338.0
offset_top = 57.118996
offset_right = 409.0
offset_bottom = 131.51944
texture_normal = ExtResource("11_l2p1m")
ignore_texture_size = true
stretch_mode = 0

[node name="Songprogressbar" type="ProgressBar" parent="UI"]
offset_left = 133.0
offset_top = 145.11899
offset_right = 449.0
offset_bottom = 168.11899
max_value = 60.0
value = 21.59
show_percentage = false

[node name="secondsprogress" type="Label" parent="UI/Songprogressbar"]
layout_mode = 0
offset_right = 316.0
offset_bottom = 23.0
theme_override_constants/outline_size = 6
text = "0:50 / 1:12"
horizontal_alignment = 1

[node name="Reset volume" type="Button" parent="UI"]
offset_left = 188.0
offset_top = 178.0
offset_right = 323.0
offset_bottom = 232.0
theme_override_font_sizes/font_size = 20
text = "Standard
Volume"

[node name="Header" type="Label" parent="UI"]
offset_left = 12.0
offset_top = 344.0
offset_right = 97.0
offset_bottom = 367.0
theme_override_constants/outline_size = 13
theme_override_font_sizes/font_size = 20
text = "Phonk Rating"

[node name="sacraficephonk" type="Button" parent="UI"]
offset_left = 1035.0
offset_top = 20.0
offset_right = 1108.0
offset_bottom = 51.0
text = "Sacrifice"

[node name="SACRIfice" type="AudioStreamPlayer2D" parent="UI/sacraficephonk"]
stream = ExtResource("13_l2p1m")

[node name="Volumeslider" type="HSlider" parent="."]
offset_left = 198.0
offset_top = 25.0
offset_right = 418.0
offset_bottom = 41.0
min_value = -80.0
max_value = 80.0
scrollable = false

[node name="Soundamount" type="Sprite2D" parent="."]
position = Vector2(173, 29)
scale = Vector2(0.10162266, 0.0974381)
texture = ExtResource("15_81jqk")

[connection signal="finished" from="speaker/Phonk player" to="." method="_on_phonk_player_finished"]
[connection signal="pressed" from="Good" to="." method="_on_good_pressed"]
[connection signal="pressed" from="Bad" to="." method="_on_bad_pressed"]
[connection signal="pressed" from="Submitphonk" to="." method="_on_submitphonk_pressed"]
[connection signal="pressed" from="UI/Playing" to="." method="_on_playing_pressed"]
[connection signal="pressed" from="UI/backten" to="." method="_on_backten_pressed"]
[connection signal="pressed" from="UI/forwardten" to="." method="_on_forwardten_pressed"]
[connection signal="pressed" from="UI/Reset volume" to="." method="_on_reset_volume_pressed"]
[connection signal="pressed" from="UI/sacraficephonk" to="." method="_on_sacraficephonk_pressed"]
[connection signal="changed" from="Volumeslider" to="." method="_on_h_slider_changed"]
[connection signal="value_changed" from="Volumeslider" to="." method="_on_volumeslider_value_changed"]
